test/mutation_analysis/s0202_happy_number/hafis/o3/mutants/22/result.txt
./test/mutation_analysis/s0202_happy_number/hafis/o3/mutants/22/Solution.java:29: error: unreachable statement
            if (sum != 1) {
            ^
1 error
